NIFI-16071 - Enable newly added controller services on versioned flow upgrade